--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -110,7 +110,7 @@ jobs:
       - name: setup for Manul code sign
         run: python code_sign.py ${{ secrets.TEAM_ID }} ${{ secrets.APPSTORE_ISSUER_ID }} ${{ secrets.MOBILEPROVISION_NAME }}
       - name: update export options for manual provisioning
-        run:  /usr/libexec/PlistBuddy -c 'Add :provisioningProfiles:ai.healthconnector.mobileapp string ${{ secrets.MOBILEPROVISION_NAME }}' ios/export-options.plist
+        run:  /usr/libexec/PlistBuddy -c 'Add :provisioningProfiles:com.livvinyl.healthconnector.app string ${{ secrets.MOBILEPROVISION_NAME }}' ios/export-options.plist
       - name: create ipa
         run: flutter build ipa --export-options-plist=ios/export-options.plist --release $ARGS
         env:
@@ -162,7 +162,7 @@ jobs:
         uses: r0adkll/upload-google-play@v1
         with:
           serviceAccountJsonPlainText: ${{ secrets.SERVICE_ACCOUNT_JSON }}
-          packageName: ai.healthconnector.mobileapp
+          packageName: com.livvinyl.healthconnector.app
           releaseFiles: ./app-release-aab/app-release.aab
           track: internal
           inAppUpdatePriority: 5
