--- a/ios/Runner/GoogleService-Info.plist
+++ b/ios/Runner/GoogleService-Info.plist
@@ -15,7 +15,7 @@
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>ai.healthconnector.mobileapp</string>
+	<string>com.livvinyl.healthconnector.app</string>
 	<key>PROJECT_ID</key>
 	<string>healthconnector-ai</string>
 	<key>STORAGE_BUCKET</key>
